# hse-advanced-python

./: requirements.txt
hw_1/: ast_builder.py  fibonacci.py
hw_2/: dockerfile  fibonacci.py  image_generator.py  run.sh  table_generator.py  utils.py
hw_2/artifacts/: content.tex  image.tex  table.tex
hw_2/hw_1_packaging/: README.md  setup.cfg
hw_3/: hashable_matrix.py  matrix.py  mixin_matrix.py
hw_3/artifacts/task_1/: matrix*.txt  matrix+.txt  matrix@.txt
hw_3/artifacts/task_3/: A.txt  AB.txt  B.txt  C.txt  CD.txt  hash.txt
hw_3/tests/: matrix_test.py
hw_4/: fibonacci.py  integrate.py  practice.py
hw_4/artifacts/: fibonacci.txt  integrate_logs.txt  integrate_time.txt  practice_log.txt
hw_5/: easy.py
