[metadata]
name = homework-1-Sushentsev
version = 0.0.1
author = Denis Sushentsev
author_email = sushentsevds@gmail.com
description = An example package with homework 1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sushentsev/hse-advanced-python
project_urls =
    Repository = https://github.com/Sushentsev/hse-advanced-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src